# czo

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  python-package.yml
czo/: __init__.py  _date.py  _datetime_utils.py  _fake_data_utils.py  _faker.py  _net.py  _network_utils.py  _path.py  _path_utils.py  _person.py  _rand.py  _random_utils.py
czo/data/: _addr.py  _country.py  _data.py  _housing.py  _internal_utils.py  _shop_sign.py
czo/utils/: __init__.py  __meta.py
faker/: __init__.py  faker.py
rand/: __init__.py  rand.py
src/czo/: __init__.py  _date.py  _faker.py  _path.py  _rand.py
src/czo/data/: _country.py  _data.py  _housing.py  _internal_utils.py
src/czo/utils/: __init__.py  __meta.py  datetime.py  faker.py  net.py  paths.py  randgen.py
src/fast/: __init__.py  _date.py  _faker.py  date.py  faker.py  path.py  rand.py
src/fast/data/: _internal_utils.py
tests/: test_additional_utils.py  test_date.py  test_help.py  test_net.py  test_rand.py
