[build-system]
requires = [
    "uv_build>=0.8.15,<0.9.0",
]
build-backend = "uv_build"

[project]
name = "czo"
version = "0.3.0"
authors = [
    { name = "sfwwslm", email = "sfwwslm@gmail.com" },
]
description = "构建测试数据的工具包"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest>=8.4.2",
]

[project.urls]
Homepage = "https://github.com/sfwwslm/czo"
Issues = "https://github.com/sfwwslm/czo/issues"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[tool.pytest.ini_options]
minversion = "6.0"

addopts = "-ra -v -s --disable-warnings"
